#261 fixed width of select box and date input so no text is cut off

--- a/app/scss/calendar/tabLibraries/_trainingPlans.scss
+++ b/app/scss/calendar/tabLibraries/_trainingPlans.scss
@@ -287,12 +287,12 @@
 
     #applyDateType
     {
-        width: 150px;
+        width: 160px;
     }
 
     #applyDate
     {
-        width: 90px;
+        width: 80px;
         padding: 0;
         height: 22px;
         float: left;
